[man] fix typo in man page

--- a/h2b.1
+++ b/h2b.1
@@ -21,7 +21,7 @@ is case insensitive.
 needs 2 hexadecimal numbers to create 1 octet of binary output.
 If there is an even count of hexadecimals the last one will be skipped.
 .Sh BUGS
-Pleas report them.
+Please report them!
 .Sh EXAMPLES
 Following example will print
 .Ar test
