Add double quoted strings functionality

--- a/h2b.1
+++ b/h2b.1
@@ -10,6 +10,7 @@
 reads hexadecimal input from standard input and transfers it to its binary form to standard output.
 It is possible to comment input by putting #.
 The comment continues till the end of line (\\n).
+It also allows to put strings quoted by double quotes (").
 .Pp
 .Nm
 skips all non-hexadecimal characters.
@@ -28,3 +29,4 @@ Following example will print
 to the standard output.
 .Pp
 .D1 echo '54 65 73 74' | h2b
+.Pp
